# adflib

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: adf_blk.rs  adf_disk.rs  adf_err.rs  adf_file.rs  adf_raw.rs  adf_str.rs  consts.rs  disk.rs  dms.rs  hunk.rs  lib.rs  main.rs  tests.rs
tests/: Ace-AGreatCompact5.adf
