[package]
name = "adflib"
version = "0.0.3"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "adflib is a library to handle amiga disk files"
homepage = "https://github.com/vschwaberow/adflib"
repository = "https://github.com/vschwaberow/adflib"
keywords = ["lib", "amiga", "filesystem", "rust"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
